src/test/compile-fail/block-must-not-have-result-while.rs
// error-pattern:statement with non-unit type requires a semicolon

fn main() {
    while true {
        true
    }
}
